tests/fixtures/invalid/pow_bool_str_str.py
# Cannot call pow() with Bool, Str, Str
x = pow(True, "hello", "hello")
